# giza-server

./: .gitignore  CHANGES.md  Makefile.am  README.md  configure.ac  giza-gs-driver.patch.annotation  verify_A_grayout.pl  verify_B_interactive.pl  verify_server12.sh
examples/: client_mouse.c  client_slider.c
patches/: giza-v1.5.0-drivers.patch
src/: giza-driver-gs-private.h  giza-driver-gs.c
test/: test_ping  test_ping.c  test_ping.sh  test_png  test_png.c  test_png.sh
test/.deps/: test_ping-test_ping.Po  test_png-test_png.Po
tools/: README.md  foreground_giza_server.sh  pdl_3d_wx.pl  verify_wx_projection.pl
viewer/: giza-server-cocoa.m  giza-server-gtk.c  giza-server-main.m  giza-server-protocol.h  giza-server-xlib-3d.c  giza-server-xlib.c  gsp_3d.h
viewer/.deps/: giza_server-giza-server-gtk.Po
